Fix header overlapping scrollbar

--- a/src/components/map/MapView.css
+++ b/src/components/map/MapView.css
@@ -1,9 +1,5 @@
 .map-background {
-  position: fixed;
+  position: absolute;
   top: 0;
   left: 0;
-  bottom: 0;
-  right: 0;
-  overflow: auto;
-  background-color: #d4d9d9;
 }
